@@ -7,6 +7,7 @@ $(if $(subst "x86_64",,$(shell uname -m)),,$(error "Error: Dtrace for Linux only
 $(if $(subst "Linux",,$(shell uname -s)),,$(error "Error: Dtrace only supports Linux"),)
 
 CFLAGS ?= -O2 -g -Wall -pedantic -Wno-unknown-pragmas
+LDFLAGS ?=
 INVARIANT_CFLAGS := -std=gnu99 -D_LITTLE_ENDIAN -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 $(DTO) -D_ILP$(BITNESS) -DCTF_OLD_VERSIONS
 BITNESS := 64
 CPPFLAGS += -Iinclude -Iuts/common
@@ -25,6 +26,7 @@ all::
 
 $(shell mkdir -p $(objdir))
 
+include Makeoptions
 include Makefunctions
 include */Build
 -include $(objdir)/*.d
