@@ -1,0 +1,18 @@
+# The implementation of the configurable make options.
+
+debugging ?= no
+coverage ?= no
+
+help::
+	@printf "Options:\n\n" >&2
+	@printf "make debugging=yes [targets]   Disable optimization to make debugger use easier\n" >&2
+	@printf "make coverage=yes [targets]    Turn on coverage support in the testsuite\n" >&2
+	@printf "\n" >&2
+
+ifneq ($(debugging),no)
+override CFLAGS += -O0 -g
+endif
+
+ifneq ($(coverage),no)
+override CFLAGS += -O0 --coverage
+endif
